--- a/index.html
+++ b/index.html
@@ -2,23 +2,16 @@
 <html>
 <head>
     <title>Todo App</title>
-    <!-- Include CSS stylesheets and JavaScript files here -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Todo App</h1>
-
-    <!-- Todo list container -->
-    <div id="todo-list-container">
+    <div class="todo-container">
+        <input type="text" id="task-input" placeholder="Enter a task">
+        <button id="add-button">Add Task</button>
         <ul id="todo-list"></ul>
     </div>
 
-    <!-- Form to add new todo -->
-    <form id="add-todo-form">
-        <input type="text" id="todo-input" placeholder="Add a new todo" required />
-        <button type="submit">Add</button>
-    </form>
-
-    <!-- Include JavaScript file here -->
-    <script src="todo.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
